--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'io.qameta.allure' version '2.8.1'
     id 'java-library'
     id 'application'
-    id 'java'
+}
+
+repositories {
+    mavenCentral()
 }
 
 ext.allureVersion = '2.13.8'
@@ -10,64 +13,59 @@ ext.junitVersion = '5.7.1'
 ext.selenideVersion = '5.18.0'
 
 allure {
+    version = allureVersion
     autoconfigure = true
     aspectjweaver = true
-    version = allureVersion
-
     useJUnit5 {
         version = allureVersion
     }
 }
 
-repositories {
-    maven {url = "https://dl.bintray.com/qameta/maven-unstable/"}
-    mavenCentral()
-}
+
 
 dependencies {
     testImplementation([
+            'org.aspectj:aspectjweaver:1.9.6',
             'com.codeborne:selenide:' + selenideVersion,
-            'io.qameta.allure:allure-java-commons:' + allureVersion,
             'io.qameta.allure:allure-selenide:' + allureVersion,
-//            'io.qameta.allure:allure-ee-junit-platform:3.28.2',
+            'ch.qos.logback:logback-classic:1.2.3',
             'com.github.javafaker:javafaker:1.0.2',
+            'org.aeonbits.owner:owner:1.0.12',
             'org.hamcrest:hamcrest-all:1.3',
             'org.junit.jupiter:junit-jupiter-api:' + junitVersion,
-            'org.junit.jupiter:junit-jupiter-params:' + junitVersion,
- //           'org.aspectj:aspectjweaver:1.9.6',
-            'org.assertj:assertj-core:3.19.0'
-
+            'org.junit.jupiter:junit-jupiter-params:' + junitVersion
     ])
 
     testRuntimeOnly([
             'org.junit.jupiter:junit-jupiter-engine:' + junitVersion,
-            'org.slf4j:slf4j-simple:1.7.30'
     ])
-    implementation('org.aeonbits.owner:owner:1.0.12')
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
 }
 
 tasks.withType(Test) {
     systemProperties += System.properties
-    System.setProperty("junit.jupiter.extensions.autodetection.enabled", "true")
-}
+    System.setProperty("chromeoptions.prefs", "intl.accept_languages=en")
 
-task negative_tests(type: Test) {
-    useJUnitPlatform {
-        includeTags 'negative'
+    if (System.getProperty("threads") != null) { //параллелизация тестов
+        systemProperties += [
+                'junit.jupiter.execution.parallel.enabled'                 : true,
+                'junit.jupiter.execution.parallel.mode.default'            : 'concurrent',
+                'junit.jupiter.execution.parallel.mode.classes.default'    : 'concurrent',
+                'junit.jupiter.execution.parallel.config.strategy'         : 'fixed',
+                'junit.jupiter.execution.parallel.config.fixed.parallelism': System.getProperty("threads").toInteger()
+        ]
+    }
+
+    testLogging {
+        lifecycle {
+            events "started", "failed"
+//            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
     }
 }
 
-test {
-    useJUnitPlatform()
-    systemProperties(System.getProperties())
-    System.setProperty("junit.jupiter.extensions.autodetection.enabled", "true")
-//    systemProperties(System.getProperties()) чтобы проставлять систем проперти которые передаем из внешне конфигурации
-    reports {
-        junitXml.enabled = false
-        html.enabled = true
+task web(type: Test) {
+    useJUnitPlatform {
+        includeTags 'web'
     }
 }
