--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 repositories {
+    maven {url = "https://dl.bintray.com/qameta/maven-unstable/"} //allure testops integrations
     mavenCentral()
 }
 
@@ -33,7 +34,8 @@ dependencies {
             'org.aeonbits.owner:owner:1.0.12',
             'org.hamcrest:hamcrest-all:1.3',
             'org.junit.jupiter:junit-jupiter-api:' + junitVersion,
-            'org.junit.jupiter:junit-jupiter-params:' + junitVersion
+            'org.junit.jupiter:junit-jupiter-params:' + junitVersion,
+            "io.qameta.allure:allure-ee-junit-platform:3.28.2" //allure testops integrations
     ])
 
     testRuntimeOnly([
@@ -43,7 +45,8 @@ dependencies {
 
 tasks.withType(Test) {
     systemProperties += System.properties
-    System.setProperty("chromeoptions.prefs", "intl.accept_languages=en")
+    System.setProperty("junit.jupiter.extensions.autodetection.enabled", "true")
+    System.setProperty("chromeoptions.prefs", "intl.accept_languages=en") //allure testops integrations
 
     if (System.getProperty("threads") != null) { //параллелизация тестов
         systemProperties += [
